[package]
name = "mccolors-rust"
version = "0.1.1"
edition = "2021"
description = "A Rust library for working with Minecraft color codes and ANSI colors."
license = "MIT"
repository = "https://github.com/wrrulos/mccolors-rust"
homepage = "https://github.com/wrrulos/mccolors-rust"

[lib]
path = "src/lib.rs"

[dependencies]